--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,9 @@
 {% block content %}
 <section class="hero">
     <h2>Welcome to History Explorer</h2>
-    <p>History Explorer helps you discover the ancient worlds through fantastic adventures, history and breathtaking landscapes. Step into the past and journey through the world’s most fascinating ancient civilizations. Discover the
+    <p>History Explorer helps you discover the ancient worlds through fantastic adventures, history and breathtaking
+        landscapes. Step into the past and journey through the world’s most fascinating ancient civilizations. Discover
+        the
         engineering marvels, rich cultures, and wonderful stories of the Incas, Mayans, and Egyptians.</p>
     <a href="#destinations" class="cta-button">Start Exploring</a>
 </section>
@@ -14,7 +16,8 @@
     <h2>Why History Explorer?</h2>
     <p>At History Explorer, we believe that the past holds the key to understanding our world. Travel back in time and
         experience the culture, achievements, and mysteries of great ancient civilizations. Whether you're a history
-        enthusiast or an adventurous traveler, there's something for everyone to discover. Will you solve some of the mysteries and help rewrite history? Will you find a hidden treasure along the way?</p>
+        enthusiast or an adventurous traveler, there's something for everyone to discover. Will you solve some of the
+        mysteries and help rewrite history? Will you find a hidden treasure along the way?</p>
 </section>
 
 <section id="destinations" class="destinations-preview">
