--- a/templates/mayans.html
+++ b/templates/mayans.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <h2>Egypt</h2>
-<p>Journey through ancient Mayan civilizaiton and explore the majestic Pyramids of Giza, the enigmatic Sphinx, and the grandeur of
+<p>Journey through ancient Mayan civilizaiton and explore the majestic Pyramids of Giza, the enigmatic Sphinx, and the
+    grandeur of
     pharaohs.</p>
 <img src="{{ url_for('static', filename='images/mayans.jpg') }}" alt="Pyramids of Giza" class="feature-image">
 
