--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <section class="hero">
     <h2>Welcome to History Explorer</h2>
     <p>History Explorer helps you discover the ancient worlds through fantastic adventures, history and breathtaking
-        landscapes. Step into the past and journey through the world’s most fascinating ancient civilizations. Discover
+        landscapes. Step into the past and journey through the world's most fascinating ancient civilizations. Discover
         the
         engineering marvels, rich cultures, and wonderful stories of the Incas, Mayans, and Egyptians.</p>
     <a href="#destinations" class="cta-button">Start Exploring</a>
@@ -46,17 +46,17 @@
     <div class="testimonial">
         <p>"Standing in the shadow of the pyramids and reviving my history was a dream come true. Thanks to History
             Explorer, I knew exactly where to go and what to see!"</p>
-        <span>– Anubis, Ancient Egyptian god of mummification</span>
+        <span>- Anubis, Ancient Egyptian god of mummification</span>
     </div>
     <div class="testimonial">
         <p>"The site helped me understand so much about the Mayan culture before my trip. There was no need to get into
             fights for a bit of action, the ruins were much more fascinating than expected!"</p>
-        <span>– Zorro, Fictional character created in 1919</span>
+        <span>- Zorro, Fictional character created in 1919</span>
     </div>
     <div class="testimonial">
         <p>"The site helped me understand so much about the Mayan culture before my trip. There was no need to get into
             fights for a bit of action, the ruins were much more fascinating than expected!"</p>
-        <span>– Apu Illapu, The God of Rain and Thunder</span>
+        <span>- Apu Illapu, The God of Rain and Thunder</span>
     </div>
 </section>
 {% endblock %}
