Update page contents

--- a/templates/egypt.html
+++ b/templates/egypt.html
@@ -3,7 +3,7 @@
 {% block title %}Egypt | History Explorer{% endblock %}
 
 {% block content %}
-<h2>Egypt: From Ancient Marvels to Modern Wonders</h2>
+<h2>Egypt - From Ancient Marvels to Modern Wonders</h2>
 <p>Journey through ancient Egypt and explore the majestic Pyramids of Giza, the enigmatic Sphinx, and the grandeur of
     pharaohs.</p>
 <img src="{{ url_for('static', filename='images/egypt.jpg') }}" alt="Pyramids of Giza" class="feature-image">
