--- a/templates/machu_picchu.html
+++ b/templates/machu_picchu.html
@@ -3,7 +3,7 @@
 {% block title %}Machu Picchu | History Explorer{% endblock %}
 
 {% block content %}
-<h2>Machu Picchu</h2>
+<h2>Incas - Machu Picchu</h2>
 <p>Step into the heart of the Inca Empire and uncover the breathtaking heights of Machu Picchu, the sacred citadel
     nestled among the Andes, where stonework meets sky.</p>
 <img src="{{ url_for('static', filename='images/machu_picchu.jpg') }}" alt="Pyramids of Giza" class="feature-image">
