--- a/templates/mayans.html
+++ b/templates/mayans.html
@@ -3,7 +3,7 @@
 {% block title %}Machu Picchu | History Explorer{% endblock %}
 
 {% block content %}
-<h2>Egypt</h2>
+<h2>The Mayan Civilization</h2>
 <p>Travel deep into the jungles of Mesoamerica and discover the wonders of the Mayan Civilization—from towering temples
     and lost cities to a legacy written in stars and stone.</p>
 <img src="{{ url_for('static', filename='images/mayans.jpg') }}" alt="Pyramids of Giza" class="feature-image">
