--- a/templates/home.html
+++ b/templates/home.html
@@ -23,19 +23,19 @@
 <section id="destinations" class="destinations-preview">
     <div class="destination-card">
         <a href="/machu_picchu">
-            <img src="{{ url_for('static', filename='images/machu_picchu.jpg') }}" alt="Machu Picchu">
+            <img src="{{ url_for('static', filename='images/machu_picchu.webp') }}" alt="Machu Picchu">
         </a>
         <h3><a href="/machu_picchu">Machu Picchu</a></h3>
     </div>
     <div class="destination-card">
         <a href="/mayans">
-            <img src="{{ url_for('static', filename='images/mayans.jpg') }}" alt="Mayan Ruins">
+            <img src="{{ url_for('static', filename='images/mayans.webp') }}" alt="Mayan Ruins">
         </a>
         <h3><a href="/mayans">Mayans</a></h3>
     </div>
     <div class="destination-card">
         <a href="/egypt">
-            <img src="{{ url_for('static', filename='images/egypt.jpg') }}" alt="Egyptian Pyramids">
+            <img src="{{ url_for('static', filename='images/egypt.webp') }}" alt="Egyptian Pyramids">
         </a>
         <h3><a href="/egypt">Egypt</a></h3>
     </div>
